# localize

./: Cargo.toml  README.md
message/cn/cnch/: table.json
message/eu/eude/: table.json
message/eu/eufr/: table.json
message/jp/jpja/: table.json
message/kr/krko/: table.json
message/us/usen/: table.json
message/us/uses/: table.json
src/: lib.rs
